--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "@total-typescript/ts-reset": "^0.4.2",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
+    "nanobus": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "uuid": "^9.0.0",
-    "yup": "^1.2.0"
+    "yup": "^1.2.0",
+    "zod": "^3.22.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
