--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,13 @@
   "compilerOptions": {
     "target": "ES2020",
     "useDefineForClassFields": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "allowJs": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "types": ["reflect-metadata"],
     "module": "ESNext",
     "skipLibCheck": true,
 
