--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "dependencies": {
     "@blueprintjs/core": "^5.2.0",
+    "@blueprintjs/datetime2": "^2.2.1",
+    "@blueprintjs/select": "^5.0.16",
     "@blueprintjs/table": "^5.0.8",
-    "@reduxjs/toolkit": "^1.9.5",
     "@total-typescript/ts-reset": "^0.4.2",
     "axios": "^1.4.0",
     "formik": "^2.4.3",
@@ -29,10 +30,10 @@
     "inversify-react": "^1.1.0",
     "mobx": "^6.10.2",
     "mobx-react-lite": "^4.0.5",
+    "moment": "^2.29.4",
     "nanobus": "^4.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0",
