--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "sass": "^1.65.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "vite-plugin-checker": "^0.6.2"
   }
 }
