--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@blueprintjs/table": "^5.0.8",
     "@total-typescript/ts-reset": "^0.4.2",
     "axios": "^1.4.0",
+    "crypto-js": "^4.2.0",
     "formik": "^2.4.3",
     "inversify": "^6.0.1",
     "inversify-react": "^1.1.0",
@@ -41,6 +42,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/uuid": "^9.0.2",
