--- a/package.json
+++ b/package.json
@@ -3,20 +3,28 @@
   "version": "0.0.1",
   "description": "This is gorilla vault secure storage solution",
   "author": "Giorgi Kumelashvili",
-  "private": true,
+  "private": "false",
   "license": "MIT",
   "engineStrict": true,
   "engines": {
-    "npm": ">=8.0.0 <9.0.0",
-    "node": ">=16.13.0 <17.0.0"
+    "npm": ">=10.0.0 <11.0.0",
+    "node": ">=20.0.0 <21.0.0"
   },
   "type": "module",
   "scripts": {
-    "check:update": "npx npm-check-updates",
     "dev": "vite --open",
     "build": "tsc && vite build",
     "build:run": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "lint": "npm run use:nvm && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "==================": "==================",
+    "modules:update:check": "npm run use:nvm && npx npm-check-updates",
+    "modules:update": "npm run use:nvm && npx npm-check-updates -u",
+    "use:nvm": "source ~/.nvm/nvm.sh && nvm use",
+    "install": "npm run use:nvm",
+    "preinstall": "npm run use:nvm",
+    "prebuild": "npm run use:nvm",
+    "preversion": "npm run use:nvm",
+    "prestart": "npm run use:nvm"
   },
   "dependencies": {
     "@blueprintjs/core": "^5.2.0",
@@ -48,7 +56,7 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -57,7 +65,7 @@
     "sass": "^1.65.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
+    "vite": "^5.0.10",
     "vite-plugin-checker": "^0.6.2"
   }
 }
