--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@blueprintjs/datetime2": "^2.3.2",
     "@blueprintjs/select": "^5.1.2",
     "@blueprintjs/table": "^5.1.2",
+    "@pulexui/core": "^0.0.20",
     "@total-typescript/ts-reset": "^0.5.1",
     "axios": "^1.6.7",
     "class-transformer": "^0.5.1",
