--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "nanobus": "^4.5.0",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
+    "react-colorful": "^5.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "reflect-metadata": "^0.2.1",
