removed name gorilla

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gorilla-vault",
+  "name": "beastz-vault-vault",
   "version": "0.0.1",
-  "description": "This is gorilla vault secure storage solution",
+  "description": "This is beastz-vault vault secure storage solution",
   "author": "Giorgi Kumelashvili",
   "private": "false",
   "license": "MIT",
