--- a/package.json
+++ b/package.json
@@ -16,62 +16,57 @@
     "start:dev": "vite --open",
     "build": "tsc && vite build",
     "build:run": "vite preview",
-    "lint": "npm run use:nvm && eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "modules:update:check": "npm run use:nvm && npx npm-check-updates",
-    "modules:update": "npm run use:nvm && npx npm-check-updates -u",
-    "use:nvm": "source ~/.nvm/nvm.sh && nvm use",
-    "install": "npm run use:nvm",
-    "preinstall": "npm run use:nvm",
-    "prebuild": "npm run use:nvm",
-    "preversion": "npm run use:nvm",
-    "prestart": "npm run use:nvm"
+    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "modules:update:check": "npx npm-check-updates",
+    "modules:update": "npx npm-check-updates -u",
+    "use:nvm": "source ~/.nvm/nvm.sh && nvm use"
   },
   "dependencies": {
-    "@blueprintjs/core": "^5.10.0",
-    "@blueprintjs/datetime2": "^2.3.2",
-    "@blueprintjs/select": "^5.1.2",
-    "@blueprintjs/table": "^5.1.2",
+    "@blueprintjs/core": "^5.10.2",
+    "@blueprintjs/datetime2": "^2.3.4",
+    "@blueprintjs/select": "^5.1.4",
+    "@blueprintjs/table": "^5.1.4",
     "@codemirror/commands": "^6.5.0",
-    "@pulexui/core": "^0.0.22",
+    "@pulexui/core": "^0.0.23",
     "@total-typescript/ts-reset": "^0.5.1",
-    "@uiw/react-codemirror": "^4.21.25",
-    "axios": "^1.6.7",
+    "@uiw/react-codemirror": "^4.22.0",
+    "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
     "filenamify": "^6.0.0",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "inversify": "^6.0.2",
     "inversify-react": "^1.1.0",
-    "mobx": "^6.12.0",
-    "mobx-react-lite": "^4.0.5",
+    "mobx": "^6.12.3",
+    "mobx-react-lite": "^4.0.7",
     "moment": "^2.30.1",
     "nanobus": "^4.5.0",
     "query-string": "^9.0.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-colorful": "^5.6.1",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.1",
-    "reflect-metadata": "^0.2.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0",
+    "reflect-metadata": "^0.2.2",
     "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "zod": "^3.23.6"
   },
   "devDependencies": {
     "@mobx-devtools/tools": "^0.0.4",
-    "@types/react": "^18.2.60",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.0",
-    "@typescript-eslint/parser": "^7.1.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "autoprefixer": "^10.4.17",
-    "eslint": "^8.57.0",
+    "autoprefixer": "^10.4.19",
+    "eslint": "^9.1.1",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "postcss": "^8.4.35",
-    "sass": "^1.71.1",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.3.3",
-    "vite": "^5.1.4",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss": "^8.4.38",
+    "sass": "^1.76.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "^5.4.5",
+    "vite": "^5.2.11",
     "vite-plugin-checker": "^0.6.4",
     "vite-plugin-svgr": "^4.2.0"
   }
