--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@codemirror/commands": "^6.5.0",
     "@pulexui/core": "^0.0.23",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
     "@uiw/react-codemirror": "^4.22.0",
     "axios": "^1.6.8",
     "class-transformer": "^0.5.1",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@mobx-devtools/tools": "^0.0.4",
+    "@types/node": "^20.12.10",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^9.0.8",
